RESOLVED FIXED 60542
Fix build with --disable-video --enable-fullscreen-api
https://bugs.webkit.org/show_bug.cgi?id=60542
Summary Fix build with --disable-video --enable-fullscreen-api
ojab
Reported 2011-05-10 03:18:35 PDT
Patch in the following comment.
Attachments
add needed ifdef (1.43 KB, patch)
2011-05-10 03:24 PDT, ojab
no flags
ojab
Comment 1 2011-05-10 03:24:27 PDT
Created attachment 92936 [details] add needed ifdef
Alexis Menard (darktears)
Comment 2 2011-05-10 15:14:12 PDT
Comment on attachment 92936 [details] add needed ifdef LGTM.
Jer Noble
Comment 3 2011-05-11 21:47:48 PDT
Whoops, I didn't consider that combination. Looks good to me.
Eric Seidel (no email)
Comment 4 2011-05-11 22:03:00 PDT
Thanks Jer.
WebKit Commit Bot
Comment 5 2011-05-12 00:40:43 PDT
The commit-queue encountered the following flaky tests while processing attachment 92936 [details]: http/tests/misc/favicon-loads-with-icon-loading-override.html bug 58412 (author: alice.liu@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2011-05-12 00:42:23 PDT
Comment on attachment 92936 [details] add needed ifdef Clearing flags on attachment: 92936 Committed r86319: <http://trac.webkit.org/changeset/86319>
Philippe Normand
Comment 7 2011-11-30 09:04:19 PST
Patch landed.
Note You need to log in before you can comment on or make changes to this bug.