2011-05-12  ojab  <ojab@ojab.ru>

Reviewed by Eric Seidel.

        Fix build with --disable-video --enable-fullscreen-api
        https://bugs.webkit.org/show_bug.cgi?id=60542

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector):

Canonical link: https://commits.webkit.org/75976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86319 268f45cc-cd09-0410-ab3c-d52691b4dbfc